<resources>
    <string name="app_name">Resume Builder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_details">Edit Details</string>
    <string name="dashboard">Dashboard</string>
    <string name="choose_image">Choose Image</string>
    <string name="save">Save</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="career_objective">Career Objective</string>
    <string name="personal_details">Personal Details</string>
    <string name="work_summary">Work Summary</string>
    <string name="company_name">Company Name</string>
    <string name="duration">Duration</string>
    <string name="add">Add</string>
    <string name="company_name_colon">Company Name:</string>
    <string name="duration_colon">Duration:</string>
    <string name="skills">Skills</string>
    <string name="skill_name">Skill Name</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="expert">Expert</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="create_a_new_resume">Create a new Resume?</string>
    <string name="date_colon">Date:</string>
    <string name="name">Name</string>
    <string name="speciality">Speciality</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="empty_objective_msg">Objective must not be empty</string>
    <string name="open_settings">Open Settings</string>
    <string name="app_permission">App Permission</string>
    <string name="storage">storage</string>
    <string name="educational_details">Educational Details</string>
    <string name="degree">Degree</string>
    <string name="passing_year">Passing Year</string>
    <string name="grade">Grade</string>
    <string name="degree_colon">Degree:</string>
    <string name="passing_year_colon">Passing Year:</string>
    <string name="grade_colon">Grade:</string>
    <string name="projects">Projects</string>
    <string name="project_name">Project Name</string>
    <string name="project_summary">Project Summary</string>
    <string name="used_technology">Used Technology</string>
    <string name="team_size">Team Size</string>
    <string name="role">Role</string>
    <string name="project_name_colon">Project Name:</string>
    <string name="summary_colon">Summary:</string>
    <string name="technologies">Technologies:</string>
    <string name="role_colon">Role:</string>
    <string name="team_size_colon">Team Size:</string>
    <string name="generate_pdf">Generate Pdf</string>
    <string name="text_generated_file_error">Error</string>
    <string name="text_create_pdf">Create Pdf</string>
    <string name="text_print">Print</string>
    <string name="text_share">Share</string>
</resources>