<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/layoutCustomToolbar"
        layout="@layout/layout_toolbar"/>

    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/_4sdp"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/layoutCustomToolbar"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_4sdp"
                android:paddingRight="@dimen/_4sdp"
                android:background="@android:color/white">

                <LinearLayout
                    android:id="@+id/form_personal_ll_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imgProfile"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="10dp"
                        android:src="@mipmap/ic_launcher" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnChooseImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/light_blue"
                        android:text="@string/choose_image"
                        app:icon="@drawable/ic_file_upload_black_24dp"
                        android:textColor="@color/white"
                        app:cornerRadius="@dimen/_4sdp" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/form_personal_til_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:errorEnabled="true"
                        app:hintTextAppearance="@android:style/TextAppearance.Medium">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/form_personal_et_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mobile_number" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/form_personal_til_email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:errorEnabled="true"
                        app:hintTextAppearance="@android:style/TextAppearance.Medium">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/form_personal_et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/email" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/form_personal_til_address"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:errorEnabled="true"
                        app:hintTextAppearance="@android:style/TextAppearance.Medium">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/form_personal_et_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/address" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/form_personal_btn_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/success"
                        android:text="@string/save"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        app:icon="@drawable/ic_check"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/form_personal_ll_form" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</RelativeLayout>