<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.EditEducationFragment">

    <include
        android:id="@+id/layoutCustomToolbar"
        layout="@layout/layout_toolbar" />

    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/_4sdp"
        android:layout_below="@+id/layoutCustomToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="@dimen/_4sdp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:paddingRight="@dimen/_4sdp"
                android:paddingLeft="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    tools:listitem="@layout/item_education"
                    tools:itemCount="2"
                    android:layout_height="wrap_content"
                    android:id="@+id/rvEducation"/>

                <LinearLayout
                    android:id="@+id/llEducationView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:hintTextAppearance="@android:style/TextAppearance.Medium">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etDegree"
                            android:layout_width="match_parent"
                            android:minLines="1"
                            android:textAlignment="textStart"
                            android:layout_height="wrap_content"
                            android:hint="@string/degree" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/form_personal_til_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:hintTextAppearance="@android:style/TextAppearance.Medium">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassingYear"
                            android:layout_width="match_parent"
                            android:inputType="number"
                            android:minLines="1"
                            android:textAlignment="textStart"
                            android:layout_height="wrap_content"
                            android:hint="@string/passing_year" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:hintTextAppearance="@android:style/TextAppearance.Medium">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etGrade"
                            android:layout_width="match_parent"
                            android:inputType="numberDecimal"
                            android:minLines="1"
                            android:textAlignment="textStart"
                            android:layout_height="wrap_content"
                            android:hint="@string/grade" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAddEducation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:backgroundTint="@color/success"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:icon="@drawable/ic_add"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/form_personal_ll_form" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSaveEducation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:backgroundTint="@color/success"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:icon="@drawable/ic_check"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/form_personal_ll_form" />

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</RelativeLayout>